--- a/assets/style.css
+++ b/assets/style.css
@@ -64,7 +64,7 @@ p {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: src="../assets/digital-marketing-meeting.jpg";
+    background-image: img src="../assets/digital-marketing-meeting.jpg";
     background-size: cover;
     background-position: center;
 }
